<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.redis.om</groupId>
  <artifactId>redis-om-spring-parent</artifactId>
  <version>0.8.0</version>
  <name>redis-om-spring-parent</name>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.test.source>17</maven.test.source>
    <maven.test.target>17</maven.test.target>
    <java.version>17</java.version>
  </properties>

  <modules>
    <!-- Main Project -->
    <module>redis-om-spring</module>
    <!-- Demos -->
    <module>demos/roms-documents</module>
    <module>demos/roms-hashes</module>
    <module>demos/roms-permits</module>
  </modules>
</project>
